Title Validation by token and role